# pkg-deploy

./: .gitignore  LICENSE  README.md  deploy.py  pyproject.toml  requirements.txt  setup.py
src/package_deploy/: __init__.py  build.py  deploy.py  publish.py  strategy.py  upload.py  utils.py  version_managment.py
src/pkg_deploy/: __init__.py  build.py  deploy.py  upload.py  utils.py  version_managment.py
