[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-deploy"
version = "1.0.1"
description = "Modern Python Package Deployment Tool"
requires-python = ">=3.10"
authors = [
    { name = "cw"},
]
readme = "README.md"
dependencies = [
    "toml",
    "tomlkit",
    "build",
    "twine",
    "Cython",
    "setuptools>=70",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[[tool.bumpversion.file]]
filename = "src/pkg_deploy/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'